<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="button_1_text">Next</string>
    <string name="checkBox_text">Malaise</string>
    <string name="checkBox2_text">Vomiting</string>
    <string name="checkBox3_text">Dizziness</string>
    <string name="checkBox4_text">Headache</string>
    <string name="checkBox5_text">Fever</string>
    <string name="textView1">Please choose what ails you and click Next:</string>
    <string name="title_activity_display_message">Head</string>
    <string name="textView">Head</string>
    <string name="textView3">All about headache....</string>
    <string name="title_activity_new_win">NewWin</string>
    <string name="textView4">Malaise</string>
    <string name="textView5">All about Malaise....</string>
    <string name="title_activity_new_win2">NewWin2</string>
    <string name="textView6">Vomiting</string>
    <string name="textView7">All about Vomiting....</string>
    <string name="title_activity_new_win3">NewWin3</string>
    <string name="textView8">Dizziness</string>
    <string name="textView9">All about Dizziness....</string>
    <string name="title_activity_new_win5">NewWin5</string>
    <string name="textView10">Fever</string>
    <string name="textView11">All about Fever....</string>


</resources>
