<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sliwka.test.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1_text"
        android:id="@+id/firstbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:onClick="buttonClick"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_text"
        android:id="@+id/checkBox"
        android:layout_above="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:singleLine="true"    />
        //android:onClick="selectItem"


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox2_text"
        android:id="@+id/checkBox2"
        android:layout_centerVertical="true"/>
        //android:onClick="selectItem"

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox3_text"
        android:id="@+id/checkBox3"
        android:layout_above="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"/>
        //android:onClick="selectItem" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox4_text"
        android:id="@+id/checkBox4"
        android:layout_above="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox3"/>
        //android:onClick="selectItem"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox5_text"
        android:id="@+id/checkBox5"
        android:layout_above="@+id/checkBox4"
        android:layout_alignStart="@+id/checkBox4"/>
        //android:onClick="selectItem"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1"
        android:id="@+id/textView2"
        android:layout_above="@+id/checkBox5"
        android:layout_alignParentStart="true" />

</RelativeLayout>
